# HitLec-trade-manager-system

./: .gitignore  CMakeLists.txt  README.md  Report.docx  lib.h  main.c  merge.sh  run.h
info/: goods.info  links.info  records.info  restore.sh  users.info
lib/: MD5.h  basic_def.h  basic_io.h  checker.h  file_op.h  functions.h  info_op.h  initialize.h  link_op.h  search.h  surface.h  type_io.h  wel_log_reg.h
